developer/src/kmc-package/test/fixtures/invalid/example.qaa.sencoten.model.js
// dummy file for unit tests